@@ -1,14 +1,0 @@
-<script type="text/javascript">
-
-if (window.rcmail && rcmail.env.action)
-  {
-  var action = rcmail.env.action=='preferences' ? 'default' : (rcmail.env.action.indexOf('identity')>0 ? 'identities' : rcmail.env.action);
-  var tab = document.getElementById('settingstab'+action);
-  }
-else 
-  var tab = document.getElementById('settingstabdefault');
-  
-if (tab)
-  tab.className = 'tablink-selected';
-
-</script>
