@@ -4,17 +4,9 @@
 <title><roundcube:object name="pagetitle" /></title>
 <roundcube:include file="/includes/links.html" />
 <link rel="stylesheet" type="text/css" href="/settings.css" />
-<script type="text/javascript">
-function show_adv(box)
-{
-    var rows = document.getElementsByTagName('TR');
-    for(var i=0; i<rows.length; i++)
-	if(rows[i].className && rows[i].className.match(/advanced/))
-	    rows[i].style.display = box.checked ? (bw.ie ? 'block' : 'table-row') : 'none';
-}
-</script>
+<script type="text/javascript" src="/functions.js"></script>
 </head>
-<body>
+<body onload="rcube_init_settings_tabs()">
 
 <roundcube:include file="/includes/taskbar.html" />
 <roundcube:include file="/includes/header.html" />
@@ -34,10 +26,8 @@ function show_adv(box)
 
 <div class="advswitch">
 <label for="advswitch"><roundcube:label name="advancedoptions"><label>
-<input type="checkbox" id="advswitch" name="_advanced" value="0" onclick="show_adv(this)" />
+<input type="checkbox" id="advswitch" name="_advanced" value="0" onclick="rcube_show_advanced(this.checked)" />
 </div>
-
-<roundcube:include file="/includes/settingscripts.html" />
 
 </body>
 </html>
